<resources>
    <string name="app_name">MyTaxiApp</string>
    <string name="title_main_activity">MyTaxiApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="error_vehicles_loading_message">We couldn\'t find any vehicle in the zone, please try another</string>
    <string name="sheet_header_msg_populated">Available vehicles</string>
    <string name="sheet_header_msg_error">Vehicles not found</string>
    <string name="sheet_header_msg_loading">Loading vehicles</string>
    <string name="heading">Heading</string>
    <string name="touch_to_load_address">Touch to get address</string>
    <string name="extra_possitive_text">Ok</string>
    <string name="extra_title">This app was proudly coded by:</string>
    <string name="my_name">Yamil Marques de Mello</string>
    <string name="email">Email:</string>
    <string name="my_email">yamamarques@gmail.com</string>
    <string name="linkedin">Linkedin:</string>
    <string name="my_linkedin">linkedin.com/in/yamilmarques/</string>

</resources>
